# Ising

./: CMakeLists.txt  Ising.i  Post.py
Doc/: main.tex  ref.bib
Native/: lattice.hpp  main.cpp
Python/: main.py  wrap.py
